Add Astronomy index, download and download splash Add Astronomy banners and header images Load the download splash for Astronomy Add Astronomy variables for image sizes

--- a/labs.fedoraproject.org/data/content/astronomy/download/astronomy-download-splash.html
+++ b/labs.fedoraproject.org/data/content/astronomy/download/astronomy-download-splash.html
@@ -5,11 +5,11 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../../templates/master.html" />
   <head>
-    <title>${_('Download Fedora Security Lab')}</title>
+    <title>${_('Download Fedora Astronomy')}</title>
   </head>
   <body>
 
-  <xi:include href="../../../templates/security/header.html" />
+  <xi:include href="../../../templates/astronomy/header.html" />
 
   <header class="splashheader main-head recover-heading">
     <div class="container">
