--- a/labs.fedoraproject.org/data/content/astronomy/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/index.html
@@ -5,20 +5,20 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Security Lab')}</title>
+    <title>${_('Astronomy')}</title>
   </head>
   <body>
 
-  <xi:include href="../../templates/security/header.html" />
+  <xi:include href="../../templates/astronomy/header.html" />
 
   <header id="head">
-    <div class="col-xs-12 text-center widewrapper copr-security">
+    <div class="col-xs-12 text-center widewrapper copr-astronomy">
     </div>
     <div class="container product-feature">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-justify top-space bottom-space">
-          <p>${_('The Fedora Security Lab provides a safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies in universities and other organizations.')}</p>
-          <p>${_('The spin is maintained by a community of security testers and developers. It comes with the clean and fast Xfce Desktop Environment and a customized menu that provides all the instruments needed to follow a proper test path for security testing or to rescue a broken system. The Live image has been crafted to make it possible to install software while running, and if you are running it from a USB stick created with LiveUSB Creator using the overlay feature, you can install and update software and save your test results permanently.')}</p>
+          <p>${_('Fedora Astronomy brings a complete ioen source toolchain to both amateur and professional astronomers.')}</p>
+          <p>${_('The Spin provides the Fedora KDE desktop enhanced with a complete scientific Python environment and the AstrOmatic software for data analysis. KStars was added to provide a full featured astrophotography tool. As KStars uses the INDI library to control equipment, various telescopes, cameras etc. are supported. Summarized, Fedora Astronomy provides a complete set of software, from the observation planning to the final results.')}</p>
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/security/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="/astronomy/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
     <div class="container using product-feature">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
-        <p><a class="btn btn-lg btn-primary" href="/security/download/index.html" role="button">${_('Download Now')}</a></p>
+        <p><a class="btn btn-lg btn-primary" href="/astronomy/download/index.html" role="button">${_('Download Now')}</a></p>
         </div>
       </div>
     </div>
@@ -143,15 +143,15 @@
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-astronomy&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-astronomy'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;users@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/users'))}</p>
+          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;astronomy@lists.fedoraproject.org&lt;/a&gt;.') % ('https://lists.fedoraproject.org/admin/lists/astronomy%40lists.fedoraproject.org/'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Specific documentation is available at the &lt;a href="%s"&gt;Security Lab wiki page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Security_Lab'))}</p>
+          <p>${Markup(_('Specific documentation is available at the &lt;a href="%s"&gt;Astronomy wiki page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Astronomy_Spin'))}</p>
         </div>
       </div>
       <div class="row top-margin">
