minor fixes to labs.fpo

--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -146,7 +146,7 @@
        </div>
 
        <div class="high">
-    	  <div class="row top-margin bottom-space">
+    	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
     	  	  <img class="screenshot image-responsive" src="${path}/static/images/screenshots/screenshot-scientific.jpg" alt="Scientific Screenshot" />
