--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -16,18 +16,33 @@
   <!-- Desktop -->
   	<div class="container hidden-xs">
       <div id="lab">
+       <div class="row top-space high">
+        <div class="col-md-5 col-md-offset-1 text-center fadescreen design">
+          <div class="spin-banner"><a href="/${lang}/astronomy"><img class="screenshot-banner" src="${path}/static/images/astronomy-banner.png" alt="Astronomy banner" /></a></div>
+          <a href="/${lang}/astronomy"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-astronomy.jpg" alt="Astronomy Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/Astronomy"><h3>${_('Explore the Outer Space.')}</h3></a>
+          <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
+        </div>
+        <div class="col-md-5 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/design-suite"><img class="screenshot-banner" src="${path}/static/images/design-suite-banner.png" alt="Design suite banner" /></a></div>
+          <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
+          <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
+        </div>
+       </div>
+
   	   <div class="row top-space high">
-  	  	<div class="col-md-5 col-md-offset-1 text-center fadescreen design">
-  	  	  <div class="spin-banner"><a href="/${lang}/design-suite"><img class="screenshot-banner" src="${path}/static/images/design-suite-banner.png" alt="Design suite banner" /></a></div>
-  	  	  <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
-  	  	  <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
-  	  	  <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
+  	  	<div class="col-md-5 col-md-offset-1 text-center fadescreen">
+  	  	  <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
+          <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Play with Fedora Today!')}</h3></a>
+          <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
   	  	</div>
   	  	<div class="col-md-5 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
           <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
-          <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Play with Fedora Today!')}</h3></a>
-          <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Unleash your inner musician.')}</h3></a>
+          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
   	   </div>
 
@@ -63,10 +78,18 @@
     <div class="container visible-xs">
       <div class="row top-space">
         <div class="col-xs-12 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/astronomy"><img class="screenshot-banner" src="${path}/static/images/astronomy-banner.png" alt="Astronomy banner" /></a></div>
+          <a href="/${lang}/astronomy"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-astronomy.jpg" alt="Astronomy Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/Astronomy"><h3>${_('Explore the Outer Space.')}</h3></a>
+          <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
+        </div>
+      </div>
+      <div class="row top-margin">
+        <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/design-suite"><img class="screenshot-banner" src="${path}/static/images/design-suite-banner.png" alt="Design suite banner" /></a></div>
-  	  	  <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
-  	  	  <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
-  	  	  <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
+          <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
+          <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
         </div>
       </div>
       <div class="row top-margin">
@@ -77,14 +100,14 @@
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
       </div>
-<!--      <div class="row top-margin">
+      <div class="row top-margin">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
           <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
   	  	  <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Unleash your inner musician.')}</h3></a>
           <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
-      </div> -->
+      </div>
       <div class="row top-margin">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
