astronomy featured apps
Signed-off-by: Robert Mayr <robyduck@fedoraproject.org>

--- a/labs.fedoraproject.org/data/content/astronomy/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/index.html
@@ -46,51 +46,51 @@
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/security/etherape.png" alt="Etherape" />
-          	<h4>${_('Etherape')}</h4>
-          	<p>${_('EtherApe is a graphical network monitor for UNIX modeled after etherman. It displays network activity graphically.')}</p>
-          	<a href="http://etherape.sourceforge.net/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/astronomy/astropy.png" alt="Astropy" />
+          	<h4>${_('Astropy')}</h4>
+          	<p>${_('Astropy is a community python library for Astronomy to foster interoperability between astronomy packages.')}</p>
+          	<a href="http://www.astropy.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/security/ettercap.png" alt="Ettercap" />
-          	<h4>${_('Ettercap')}</h4>
-          	<p>${_('Ettercap is a comprehensive suite for man in the middle attacks.')}</p>
-          	<a href="http://ettercap.github.io/ettercap/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/astronomy/kstars.png" alt="Kstars" />
+          	<h4>${_('Kstars')}</h4>
+          	<p>${_('Kstars provides an accurate graphical simulation of the night sky, from any location on Earth, at any date and time.')}</p>
+          	<a href="https://edu.kde.org/kstars/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/security/medusa.png" alt="Medusa" />
-          	<h4>${_('Medusa')}</h4>
-          	<p>${_('Medusa is intended to be a speedy, massively parallel, modular, login brute-forcer.')}</p>
-          	<a href="http://foofus.net/goons/jmk/medusa/medusa.html">${Markup(_('Learn More &gt;'))}</a>
+	      	<img src="${path}/static/images/astronomy/celestia.png" alt="Celestia" />
+          	<h4>${_('Celestia')}</h4>
+          	<p>${_('The free space simulation that lets you explore our universe in three dimensions.')}</p>
+          	<a href="http://www.shatters.net/celestia/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/security/nmap.png" alt="Nmap" />
-          	<h4>${_('Nmap')}</h4>
-          	<p>${_('Nmap is a free and open source utility for network discovery and security auditing.')}</p>
-          	<a href="http://nmap.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/astronomy/virtualplanet.png" alt="Virtualplanet" />
+          	<h4>${_('Virtualplanet')}</h4>
+          	<p>${_('Allow you to visualize any planet aspect at any time. Include extended feature database and texture.')}</p>
+          	<a href="http://www.ap-i.net/avp/en/start">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/security/scapworkbench.png" alt="Scap-workbench" />
-          	<h4>${_('Scap-workbench')}</h4>
-          	<p>${_('A GUI tool that serves as an SCAP scanner and provides tailoring functionality for ​SCAP content.')}</p>
-          	<a href="https://fedorahosted.org/scap-workbench/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/astronomy/siril.png" alt="Siril" />
+          	<h4>${_('Siril')}</h4>
+          	<p>${_('Siril, a free astronomical image processing software')}</p>
+          	<a href="https://free-astro.org/index.php/Siril">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/security/skipfish.png" alt="Skipfish" />
-          	<h4>${_('Skipfish')}</h4>
-          	<p>${_('Skipfish is an active web application security reconnaissance tool.')}</p>
+	      	<img src="${path}/static/images/astronomy/indi.png" alt="INDI" />
+          	<h4>${_('INDI')}</h4>
+          	<p>${_('The INDI Library is a cross-platform software designed for automation and control of astronomical instruments.')}</p>
           	<a href="https://code.google.com/p/skipfish/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
@@ -98,26 +98,26 @@
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/security/sqlninja.png" alt="Sqlninja" />
-          	<h4>${_('Sqlninja')}</h4>
-          	<p>${_('A tool targeted to test SQL Injection vulnerabilities on a web application using Microsoft® SQL Server as its back-end.')}</p>
-          	<a href="http://sqlninja.sourceforge.net/index.html">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/design/gimp.png" alt="GIMP" />
+          	<h4>${_('GIMP')}</h4>
+          	<p>${_('A powerful image composition and graphic editing app, similar to Adobe® Photoshop™.')}</p>
+          	<a href="http://www.gimp.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/security/wireshark.png" alt="Wireshark" />
-          	<h4>${_('Wireshark')}</h4>
-          	<p>${_('Wireshark is a network traffic analyzer for UNIX-ish operating systems.')}</p>
-          	<a href="https://www.wireshark.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/astronomy/redshift.png" alt="redshift" />
+          	<h4>${_('redshift')}</h4>
+          	<p>${_('redshift more info?')}</p>
+          	<a href="https://www.redshift.moreinfo/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/security/yersinia.png" alt="Yersinia" />
-          	<h4>${_('Yersinia')}</h4>
-          	<p>${_('Yersinia is a network tool designed to take advantage of some weakness in different network protocols')}</p>
-          	<a href="http://www.yersinia.net/">${Markup(_('Learn More &gt;'))}</a>
+	      	<img src="${path}/static/images/astronomy/astromatic.png" alt="Astromatic" />
+          	<h4>${_('Astromatic')}</h4>
+          	<p>${_('AstrOmatic.net is a website dedicated to astronomical pipeline software.')}</p>
+          	<a href="http://www.astromatic.net/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
