--- a/getfedora.org/data/content/server/download/index.html
+++ b/getfedora.org/data/content/server/download/index.html
@@ -49,16 +49,9 @@
         <div class="col-md-3 text-left col-md-offset-1">
           <h3>${_('Other Downloads')}</h3>
           <p>
-          ${_('Installation DVD:')}
-          <ul>
-            <li><p><a class="server-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/i386/iso/Fedora-Server-DVD-i386-${global_variables.release['curr_id']}.iso">${Markup(_('32-bit %sGB image')) % global_variables.iso_size['i386_server_DVD']}</a></p></li>
-          </ul>
-          </p>
-          <p>
-          ${_('Netinstall Images:')}
+          ${_('Netinstall Image:')}
           <ul>
           <li><p><a class="server-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['curr_id']}.iso">${Markup(_('64-bit %sMB image')) % global_variables.iso_size['x86_64_server_net']}</a></p></li>
-          <li><p><a class="server-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/i386/iso/Fedora-Server-netinst-i386-${global_variables.release['curr_id']}.iso">${Markup(_('32-bit %sMB image')) % global_variables.iso_size['i386_server_net']}</a></p></li>
           </ul>
           </p>
           <div class="bottom-margin">
