fix redshift URL

--- a/labs.fedoraproject.org/data/content/astronomy/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/index.html
@@ -109,7 +109,7 @@
           	<img src="${path}/static/images/astronomy/redshift.png" alt="Redshift" />
           	<h4>${_('Redshift')}</h4>
           	<p>${_('Redshift adjusts the color temperature of your screen according to your surroundings.')}</p>
-          	<a href="https://www.redshift.moreinfo/">${Markup(_('Learn More &gt;'))}</a>
+          	<a href="http://jonls.dk/redshift//">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
