fix typo in Astronomy

--- a/labs.fedoraproject.org/data/content/astronomy/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/index.html
@@ -17,7 +17,7 @@
     <div class="container product-feature">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-justify top-space bottom-space">
-          <p>${_('Fedora Astronomy brings a complete ioen source toolchain to both amateur and professional astronomers.')}</p>
+          <p>${_('Fedora Astronomy brings a complete open source toolchain to both amateur and professional astronomers.')}</p>
           <p>${_('The Spin provides the Fedora KDE desktop enhanced with a complete scientific Python environment and the AstrOmatic software for data analysis. KStars was added to provide a full featured astrophotography tool. As KStars uses the INDI library to control equipment, various telescopes, cameras etc. are supported. Summarized, Fedora Astronomy provides a complete set of software, from the observation planning to the final results.')}</p>
         </div>
       </div>
