change Astromatic description

--- a/labs.fedoraproject.org/data/content/astronomy/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/index.html
@@ -116,7 +116,7 @@
           <div class="border">
 	      	<img src="${path}/static/images/astronomy/astromatic.png" alt="Astromatic" />
           	<h4>${_('Astromatic')}</h4>
-          	<p>${_('AstrOmatic.net is a website dedicated to astronomical pipeline software.')}</p>
+          	<p>${_('AstrOmatic is a set of astronomical pipeline software.')}</p>
           	<a href="http://www.astromatic.net/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
