flocktofedora: Add travel advisory info

--- a/flocktofedora.org/data/content/location/index.html
+++ b/flocktofedora.org/data/content/location/index.html
@@ -16,11 +16,33 @@
       <div class="row">
         <div class="col-xs-12">
           <h1>${_('Krakow, Poland - August 2-5, 2016')}</h1>
-          <p>${_('Flock lodging, as well as conference proceedings, will be held at the Best Western Premier Krakow. Room rate for a single or double (two twin beds) is approximately €65 per night. Wifi is freely available in public areas and guest rooms. Free breakfast is provided.')}</p>
-	  <p><strong>${_('Do you want to book a room?')}</strong> ${_('Download the hotel form, fill it in, and return to the hotel via the email or fax noted on the form itself.')} ${_('Unfortunately, an online booking code is not available currently for this hotel.')}</p>
-	  <p><a href="../../../static/images/hotel-form-2016.pdf">${_('Download now...')}</a></p>
-	  <p><strong>${_('Do you want to fill out the form on your Fedora system?')}</strong> ${_('Try the xournal package already available for current Fedora releases. You can insert text, and sign with a pointing device, touch display, or drawing tablet. Then export the result to another PDF file and return via email.')}</p>
-        </div>
+	  <div class="row">
+	    <div class="col-xs-6">
+              <div class="panel panel-default">
+		<div class="panel-heading">
+		  <h3 class="panel-title"><i class="fa fa-map-marker"></i> ${_('Lodging')}</h3>
+		</div>
+		<div class="panel-body">
+		  <p>${_('Flock lodging, as well as conference proceedings, will be held at the Best Western Premier Krakow. Room rate for a single or double (two twin beds) is approximately €65 per night. Wifi is freely available in public areas and guest rooms. Free breakfast is provided.')}</p>
+		  <p><strong>${_('Do you want to book a room?')}</strong> ${_('Download the hotel form, fill it in, and return to the hotel via the email or fax noted on the form itself.')} ${_('Unfortunately, an online booking code is not available currently for this hotel.')}</p>
+		  <p><a href="../../../static/images/hotel-form-2016.pdf">${_('Download now...')}</a></p>
+		  <p><strong>${_('Do you want to fill out the form on your Fedora system?')}</strong> ${_('Try the xournal package already available for current Fedora releases. You can insert text, and sign with a pointing device, touch display, or drawing tablet. Then export the result to another PDF file and return via email.')}</p>
+		</div>
+	      </div>
+	    </div>
+	      
+	    <div class="col-xs-6">
+	      <div class="panel panel-default">
+		<div class="panel-heading">
+		  <h3 class="panel-title"><i class="fa fa-info-circle"></i> ${_('Travel Advisory')}</h3>
+		</div>
+		<div class="panel-body">
+		  <p>${_('Note that in connection with Catholic Youth Day festivities, Poland will impose border controls at all of its national borders from July 4 to August 2. Visitors to Poland during this period should be prepared to show their passport and undergo stricter security screening. This change will mostly impact travelers coming to Flock via ground transport. EU citizens should be able to use their ID instead of passport.')}</p>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
       </div>
 
       <div class="row">
