add torrent section

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -201,6 +201,25 @@
     </div>
   </div>
 
+  <!-- Torrents -->
+  <div class="jumbotron top-space main-head hidden-xs hidden-sm">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-12">
+        <h2>${_('Bittorrent Downloads')}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 product-feature">
+        <p>${_('Fedora offers many bittorrent downloads. Access our directory of torrents below:')}</p>
+        </div>
+        <div class="col-xs-12 text-center">
+        <p><a class="btn btn-lg btn-primary" href="//torrent.fedoraproject.org" role="button">${_('torrent.fedoraproject.org')}</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Desktops -->
   <div class="jumbotron main-head top-space desktop visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
